[package]
name = "cuda11-cuda-sys"
version = "0.2.0"
authors = ["yguan <yguan@example.com>"]
edition = "2018"
description = """
cuda ffi


"""
documentation = "https://docs.rs/cuda11-cuda-sys"
homepage = "https://github.com/pipehappy1/cuda11-sys"
repository = "https://github.com/pipehappy1/cuda11-sys"
readme = "README.md"
license = "MIT"
keywords = ["machine-learning", "neural-network", "deep-learning"]
exclude = ["/dev/**"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# links = "cuda"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.54", optional = true }

[features]
default = ["generate"]
generate = ["bindgen"]
